--- a/server/views/email.ejs
+++ b/server/views/email.ejs
@@ -170,7 +170,7 @@
                         margin-top: 15px;
                       "
                     >
-                      Hello
+                      Hello <%= data.user.name %>
                     </h3>
                   </td>
 
@@ -205,7 +205,7 @@
               <thead>
                 <tr style="display: block">
                   <td style="display: block">
-                    <h2 class="password-button">test</h2>
+                    <h2 class="password-button"><%= data.activationCode %></h2>
                   </td>
                 </tr>
               </thead>
