--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -89,6 +89,18 @@
   }
 }
 
+/* Chorme, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .hero {
   background: var(--hero);
 }
