--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -101,6 +101,21 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+/* change soroll behaver */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(50, 50, 63);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(69, 69, 107);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(57, 57, 117);
+}
+
 .hero {
   background: var(--hero);
 }
