add forgot password functionality

--- a/server/views/order-confirmation.ejs
+++ b/server/views/order-confirmation.ejs
@@ -9,5 +9,7 @@
     <h1>Hello <%= user %></h1>
     <p>You are just confirm your order</p>
     <p>You are purcharch <%= name %></p>
+    <p>Course price: <%= price %></p>
+    <p>Date: <%= date %></p>
   </body>
 </html>
